# noogle-cli

./: .gitignore  Cargo.toml  README.md  build.rs  data.json  flake.nix  vimPlugin.nix
lua/noogle/: init.lua
src/: main.rs  models.rs
