[package]
name = "noogle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noogle"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.96"
argh = "0.1.13"
rust-fuzzy-search = "0.1.1" # already a dependency of argh
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
