[package]
name = "noogle-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "noogle"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
fuzzy-matcher = "0.3.7"
rkyv = { version = "0.8.11", default-features = false, features = ["std"] }

[build-dependencies]
rkyv = { version = "0.8.11", default-features = false, features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
